--- a/exercicios/ex022/fundo2.html
+++ b/exercicios/ex022/fundo2.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Personalização dos fundos</title>
+    <style>
+        body {
+            background-color: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+        }
+    </style>
 </head>
 <body>
-    <h1>Exercício de Teste</h1>
+    
 </body>
 </html>
