--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -28,8 +28,20 @@
             background-color: antiquewhite;
         }
 
+        
         thead, tfoot {
             background-color: gray;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
         }
 
         td.num {
@@ -182,6 +194,6 @@
             </tr>
         </tfoot>
     </table>
-
+   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>   <loren>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ea rerum, quidem obcaecati et accusantium ducimus ad eligendi, cumque impedit aliquam optio laudantium animi natus vel vero, assumenda iste nulla!</loren>
 </body>
 </html>
