--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -22,7 +22,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam similique, sed ipsa distinctio fugit mollitia facilis eveniet voluptatum cupiditate, ducimus cumque ratione omnis atque blanditiis eligendi amet animi maxime quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis provident commodi cupiditate! Dolor consectetur officia expedita tempore id libero? Ea esse soluta fuga numquam culpa tenetur expedita itaque error doloremque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic dicta illo cupiditate praesentium, excepturi minima iure inventore reprehenderit vitae quibusdam ex alias blanditiis delectus et laborum adipisci deleniti, mollitia aliquid!
     </p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"><p>
+        Infelizmente seu navegador não é compatível com isso!
+    </p></iframe>
+
+    
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat atque cumque vel eius! Impedit, laborum officia earum nobis reprehenderit maiores voluptatem omnis error itaque voluptatum maxime aliquam praesentium ratione! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione facere repudiandae, libero deleniti odit possimus? Placeat rerum enim facilis, nobis corporis modi voluptates itaque quis? Minima sed commodi animi nihil? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi autem reprehenderit recusandae animi, tempora corrupti expedita amet velit ipsum voluptatibus libero quos! Tenetur doloremque porro dignissimos aperiam eaque, iusto rem.
