--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -7,9 +7,10 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
-<body>
-    <header>
+<body onresize="mudouTamanho()">
+    <header> 
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()"> menu</span>
        
@@ -28,13 +29,21 @@
         <article>
             <h2>Testando Media Queries</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quod sequi, recusandae rem consectetur, eaque assumenda nostrum similique nobis ipsa dignissimos, doloribus magni natus! Incidunt accusantium aut assumenda impedit quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sunt velit nemo delectus. Impedit incidunt temporibus, officia illo et tempora tenetur molestias! Consectetur omnis eos porro maxime esse, non sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vero perferendis nulla libero enim qui corrupti explicabo a dolorem. Beatae, rerum consequuntur unde voluptates eaque hic a laborum fugit saepe.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quod sequi, recusandae rem consectetur, eaque assumenda nostrum similique nobis ipsa dignissimos, doloribus magni natus! Incidunt accusantium aut assumenda impedit quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sunt velit nemo delectus. Impedit incidunt temporibus, officia illo et tempora tenetur molestias! Consectetur omnis eos porro maxime esse, non sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vero perferendis nulla libero enim qui corrupti explicabo a dolorem. Beatae, rerum consequuntur unde voluptates eaque hic a laborum fugit saepe.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quod sequi, recusandae rem consectetur, eaque assumenda nostrum similique nobis ipsa dignissimos, doloribus magni natus! Incidunt accusantium aut assumenda impedit quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sunt velit nemo delectus. Impedit incidunt temporibus, officia illo et tempora tenetur molestias! Consectetur omnis eos porro maxime esse, non sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vero perferendis nulla libero enim qui corrupti explicabo a dolorem. Beatae, rerum consequuntur unde voluptates eaque hic a laborum fugit saepe.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quod sequi, recusandae rem consectetur, eaque assumenda nostrum similique nobis ipsa dignissimos, doloribus magni natus! Incidunt accusantium aut assumenda impedit quo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab sunt velit nemo delectus. Impedit incidunt temporibus, officia illo et tempora tenetur molestias! Consectetur omnis eos porro maxime esse, non sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vero perferendis nulla libero enim qui corrupti explicabo a dolorem. Beatae, rerum consequuntur unde voluptates eaque hic a laborum fugit saepe.</p>
+            <p>Texto é uma produção, verbal ou não verbal, que se constitui com algum código, no intuito de comunicar algo a alguém, em determinado tempo e espaço. Sua definição ampla se deve ao fato de também abranger diversos formatos.</p>
+            <p>Pode-se compreender o texto verbal, oral e escrito, como uma prática social que utiliza estruturas verbais, organizadas e caracterizadas por suas estruturas linguísticas e sua função social, com vistas a cumprir um papel pessoal ou coletivo na vida humana. O mesmo se aplica aos textos não verbais, também compreendidos como uma ação social, diferenciando-se somente em função das estruturas e códigos utilizados.</p>
+            <p>O conceito de texto pode variar a depender da perspectiva teórica adotada para estudá-lo. A palavra texto, ao longo da história, foi ganhando diferentes sentidos, de modo que novas construções foram compreendidas como tal.</p>
+            <p>De acordo com o percusso de investigações sobre o texto, nas mais diversas correntes teóricas que se debruçam sobre esse objeto, o conceito foi se modificando e se ampliando. Hoje o texto não é considerado uma estrutura pronta, com unidade de sentido completa, pois consideram-se também os processos de planejamento,construção e recepção do texto.</p>
         </article>
     </main>
     <script>
+
+        function mudouTamanho() {
+            if (windows.innerwidth >= 768) {
+                intens.style.display= 'block'
+            } else {
+                otens.style.display = 'none'
+            }
+        }
         function clickMenu() { /* Menu hamburgue abre e fecha */
             if (itens.style.display == 'block')
                 {itens.style.display = 'none'}
